[package]
version = "0.1.15"
name = "hallr"
edition = "2024"
readme = "README.md"
description = "An experimental Blender addon"
repository = "https://github.com/eadf/hallr"
license = "AGPL-3.0-or-later"
authors = ["eadf"]
rust-version = "1.85.1"
keywords = ["blender", "voronoi", "lsystems", "geometry"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vector-traits = { version="0.5.0", features = ["glam"]}
#vector-traits = { path = "../vector-traits", features = ["glam"] }
#vector-traits = {git = "https://codeberg.org/eadf/vector_traits_rs.git", features = ["glam"]}
linestring = { version="0.15.0", features = ["glam"] }
#linestring = { path="../linestring.rs", features = ["glam"]}
#linestring = {git = "https://codeberg.org/eadf/linestring_rs.git", features = ["glam"]}
centerline = { version="0.13.0", features = ["glam"]}
#centerline = { path="../centerline.rs", features = ["glam"]}
#centerline = {git = "https://codeberg.org/eadf/centerline_rs.git", features = ["glam"]}
krakel = {version = "0.4.1", features = ["vector-traits", "glam"]}
#krakel = {path = "../krakel", features = ["vector-traits", "glam"]}
#krakel = {git = "https://codeberg.org/eadf/krakel_rs.git", features = ["vector-traits", "glam"]}
hronn = { version = "0.6.0", features = ["glam"]}
#hronn = { path = "../hronn.rs", features = ["glam"]}
#hronn = { git = "https://codeberg.org/eadf/hronn_rs.git", features = ["glam"]}
#dedup_mesh = { git = "https://codeberg.org/eadf/dedup_mesh_rs.git", features = ["parallel", "simd"]}
#dedup_mesh = { path = "../dedup_mesh_rs", features = ["parallel", "simd"]}
dedup_mesh = { version = "=0.2.0", features = ["parallel", "simd"]}

boostvoronoi = { version = "0.11.1" }
thiserror = "2.0.12"
ahash = "0.8.12"
smallvec = "1.15.1"
rayon = "1.10.0"
itertools = "0.14.0"
vob = "3.0.5"
earcutr = "0.5.0"
ilattice = { version="0.4.0", default-features = false, features = ["glam", "rayon"]}
fast-surface-nets = "0.2.1"
#fast-surface-nets = {git="https://github.com/eadf/fast-surface-nets-rs.git", rev= "02552f3", features = []}
#fast-surface-nets = {path="../fast-surface-nets-rs", features = []}
baby_shark = "=0.3.10"
logos = "0.15"
ryu = { version="1.0.20", optional=true }
saft = { version="0.34.1", features = ["with_rayon"]}
macaw = { version="^0.19"} # macaw must be the same version that saft uses
rustc-hash = "2.1.1"

[dev-dependencies]
rand = "0.9.1"

[features]
generate_test_case_from_input = ["dep:ryu"]
glam-core-simd  = ["vector-traits/glam-core-simd"]
glam-fast-math = ["vector-traits/glam-fast-math"]
display_sdf_chunks = []

[profile.release]
opt-level = 3
lto = true

[package.metadata.docs.rs]
all-features = false
features = []
